<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuitarChordFinder</string>
    <string name="action_settings">Settings</string>
    <string name="guitar_fretboard">Guitar Fretboard</string>
    <string name="guitar_chord_library">Guitar Chord Library</string>
    <string name="chord_chooser">Chord Chooser</string>
    <string name="currentChord"><b><i>A</i></b></string>
    <string name="choose_chord">Choose Chord</string>
    <string name="choose_maj_min_or_flat_sharp">Choose maj/min or flat/sharp</string>

    <dimen name="fontSize">24pt</dimen>
    <dimen name="fontSizeSpinner">28pt</dimen>

    <string name="enter_button">Enter</string>

    <dimen name="textSize">20pt</dimen>

    <string name="title_activity_menu">MenuActivity</string>
    <string name="guitar_chord_finder"><b>Guitar Chord Finder</b></string>
    <string name="chord_search">Chord Search</string>
    <string name="home">Home</string>
    <string name="instructions">Instructions</string>
    <string name="quit">Quit</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_instruct">InstructActivity</string>
    <string name="first_finger">" - Stands for your first finger"</string>
    <string name="second_finger">" - Stands for second finger"</string>
    <string name="third_finger">" - Stands for third finger"</string>
    <string name="fourth_finger">" - Stands for fourth finger"</string>
    <string name="barre_first_finger">&quot; - A Barre of first finger&quot;</string>
    <string name="choose_key">Choose Key</string>

</resources>
